[package]
name = "bevy_easings"
version = "0.14.0-rc.2"
authors = ["François Mockers <francois.mockers@vleue.com>"]
edition = "2021"
description = "Easing plugin for Bevy"
repository = "https://github.com/vleue/bevy_easings"
homepage = "https://github.com/vleue/bevy_easings"
documentation = "https://docs.rs/bevy_easings"
keywords = ["bevy", "animation", "easing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["examples/*.webp"]
categories = ["game-development"]

[dependencies]
interpolation = "0.3"

[dependencies.bevy]
version = "0.14.0-rc.3"
default-features = false

[dev-dependencies.bevy]
version = "0.14.0-rc.3"
default-features = false
features = ["bevy_render", "bevy_sprite", "bevy_ui"]

[dev-dependencies]
rand = "0.8"

[features]
default = ["render", "sprite", "ui"]
"render" = ["bevy/bevy_render"]
"sprite" = ["bevy/bevy_sprite"]
"ui" = ["bevy/bevy_ui"]
"examples" = [
    "ui",
    "sprite",
    "render",
    "bevy/bevy_winit",
    "bevy/x11",
    "bevy/bevy_asset",
    "bevy/bevy_core_pipeline",
    "bevy/default_font",
    "bevy/png",
    # Should be removed once this is fixed in Bevy 0.14
    "bevy/ktx2",
    "bevy/zstd",
    "bevy/bevy_pbr",
]

[[example]]
name = "chain"
required-features = ["examples"]

[[example]]
name = "react_on_end"
required-features = ["examples"]

[[example]]
name = "sprite_color"
required-features = ["examples"]

[[example]]
name = "custom_component"
required-features = ["examples"]

[[example]]
name = "pause"
required-features = ["examples"]

[[example]]
name = "sprite_size"
required-features = ["examples"]

[[example]]
name = "transform_rotation"
required-features = ["examples"]

[[example]]
name = "transform_translation"
required-features = ["examples"]

[[example]]
name = "ui_style"
required-features = ["examples"]

[[example]]
name = "ui_color"
required-features = ["examples"]

[[example]]
name = "controlled"
required-features = ["examples"]
