[package]
name = "bevy_easings"
version = "0.15.0"
authors = ["François Mockers <francois.mockers@vleue.com>"]
edition = "2021"
description = "Easing plugin for Bevy"
repository = "https://github.com/vleue/bevy_easings"
homepage = "https://github.com/vleue/bevy_easings"
documentation = "https://docs.rs/bevy_easings"
keywords = ["bevy", "animation", "easing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["examples/*.webp"]
categories = ["game-development"]

[dependencies]
interpolation = "0.3"

[dependencies.bevy]
version = "0.15.0"
default-features = false

[dev-dependencies.bevy]
version = "0.15.0"
default-features = false
features = [
    "bevy_window",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "bevy_sprite",
    "bevy_render",
    "bevy_winit",
    "x11",
    "bevy_asset",
    "bevy_core_pipeline",
    "default_font",
    "png",
]

[dev-dependencies]
rand = "0.8"

[features]
default = ["render", "sprite", "ui"]
"render" = ["bevy/bevy_render"]
"sprite" = ["bevy/bevy_sprite"]
"ui" = ["bevy/bevy_ui"]
