[package]
name = "bevy_easings"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
description = "Easing plugin for Bevy"
repository = "https://github.com/mockersf/bevy_extra"
homepage = "https://github.com/mockersf/bevy_extra/tree/master/bevy_easings"
documentation = "https://docs.rs/bevy_easings"
keywords = ["bevy", "animation", "easing"]
license = "MIT"
readme = "README.md"
exclude = ["examples/*.gif"]

[dependencies]
bevy = "0.2"
interpolation = "0.2"
rand = { version = "0.7", optional = true }

[features]
default = [ "ease_handle" ]
ease_handle = [ "rand" ]
