[package]
name = "bevy_easings"
version = "0.2.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
description = "Easing plugin for Bevy"
repository = "https://github.com/mockersf/bevy_extra"
homepage = "https://github.com/mockersf/bevy_extra/tree/master/bevy_easings"
documentation = "https://docs.rs/bevy_easings"
keywords = ["bevy", "animation", "easing"]
license = "MIT"
readme = "README.md"
exclude = ["examples/*.gif"]

[dependencies]
bevy = { version = "0.3", default-features = false, features = [ "bevy_ui", "bevy_render" ]  }
interpolation = "0.2"
rand = { version = "0.7", optional = true }

[features]
default = [ "ease_handle" ]
ease_handle = [ "rand", "bevy/bevy_sprite" ]

[[example]]
name = "chain"
required-features = [ "bevy/bevy_winit", "bevy/render", "bevy/bevy_wgpu" ]

[[example]]
name = "colormaterial_color"
required-features = [ "bevy/bevy_winit", "bevy/render", "bevy/bevy_wgpu" ]

[[example]]
name = "custom_component"
required-features = [ "bevy/bevy_winit", "bevy/render", "bevy/bevy_wgpu" ]

[[example]]
name = "pause"
required-features = [ "bevy/bevy_winit", "bevy/render", "bevy/bevy_wgpu" ]

[[example]]
name = "sprite_size"
required-features = [ "bevy/bevy_winit", "bevy/render", "bevy/bevy_wgpu" ]

[[example]]
name = "transform_rotation"
required-features = [ "bevy/bevy_winit", "bevy/render", "bevy/bevy_wgpu" ]

[[example]]
name = "transform_translation"
required-features = [ "bevy/bevy_winit", "bevy/render", "bevy/bevy_wgpu" ]

[[example]]
name = "ui_style"
required-features = [ "bevy/bevy_winit", "bevy/render", "bevy/bevy_wgpu" ]
