[package]
name = "bevy_log_diagnostic"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
description = "Logs diagnostic informations from Bevy"
repository = "https://github.com/mockersf/bevy_extra"
homepage = "https://github.com/mockersf/bevy_extra/tree/master/bevy_log_diagnostic"
documentation = "https://docs.rs/bevy_log_diagnostic"
keywords = ["bevy", "diagnostics", "log"]
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { version = "0.3", default-features = false }
tracing = "0.1"
