[package]
name = "bevy_ninepatch"
version = "0.1.3"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
description = "Displays 9-Patch UI elements in Bevy"
repository = "https://github.com/mockersf/bevy_extra"
homepage = "https://github.com/mockersf/bevy_extra/tree/master/bevy_ninepatch"
documentation = "https://docs.rs/bevy_ninepatch"
keywords = ["bevy", "ninepatch"]
license = "MIT"
readme = "README.md"
exclude = ["examples/*.png", "examples/*.gif", "*.png", "assets/"]

[dependencies]
bevy = "0.2"
rand = "0.7"
